Downgrade java from 17 to 1.8.